--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -13,12 +13,13 @@ header{
 .nav{
     width: 100%;
     height: 50px;
-    background-color: #aed3d0; 
+    background-color: rgb(60, 91, 111); 
     display: flex;
     justify-content: space-between;
     align-items: center;
+    padding: 0px 30px;
 }
-.left img{
+.right img{
     width: 30px;
     height: 30px;
     border-radius: 50%;
@@ -26,6 +27,6 @@ header{
 }
 .left a{
     text-decoration: none;
-    margin-left: 40px;
     font-size: 20px;
+    color: white;
 }
