--- a/src/Components/UserDashboard/Dashboard.css
+++ b/src/Components/UserDashboard/Dashboard.css
@@ -7,10 +7,11 @@
     width: 100%;
     overflow: auto;
     margin-top: 50px;
-    padding: 10px;
+    padding: 5px;
     display: flex;
     justify-content: center;
     background:rgb(21, 52, 72);
+    /* height: 100vh; */
 }
 .dashboard {
     width: 100%;
@@ -54,6 +55,11 @@
     
  }
 
+ .sandclock .sandtimernew-style{
+  width: 30px;
+  height: 40px;
+  background-color: transparent;
+ }
   .game-queue {
     margin-top: 30px;
   }
@@ -108,5 +114,21 @@
     object-position: center;
     background-position: center;
   }
-
-  
+  .queue-image{
+    width: 40px;
+  }
+.lottie-container{
+  text-align: center;
+  border: 1px solid;
+  width: 90%;
+  margin: 20px auto ;
+  overflow: hidden;
+}
+.queue-item {
+  display: inline-block;   /* Makes each item appear next to each other in a row */
+  text-align: center;      /* Centers the image and text */
+  margin: 5px;            /* Adds spacing between images */
+}
+.highlighted {
+  /* box-shadow: 0px 0px 5px ; */
+}
