--- a/src/Components/UserLogin/Login.css
+++ b/src/Components/UserLogin/Login.css
@@ -39,6 +39,7 @@
     object-fit: cover;
     background-position: center;
     background-size: cover;
+    margin-top: 20px;
 }
 .form-container{
     width: 100%;
@@ -81,6 +82,18 @@ form span{
     margin-bottom: 4px;
 }
 .input-container input{
+    background-color: rgba(255, 255, 255, 0.1) ; 
+    color: white;
+    border: none;
+    outline: none;
+}
+.input-container select{
+    background-color: rgba(255, 255, 255, 0.1) ; 
+    color: white;
+    border: none;
+    outline: none;
+}
+.input-container select:focus{
     background-color: rgba(255, 255, 255, 0.1) ; 
     color: white;
     border: none;
