--- a/src/Components/UserLogin/Login.css
+++ b/src/Components/UserLogin/Login.css
@@ -6,18 +6,21 @@
 }
 .login-container{
     width: 100%;
-    height: 100vh;
+    min-height: 100vh;
     overflow: scroll;
     display: flex;
     justify-content: center;
     align-items: center;
-    background:rgb(21, 52, 72);
+    background-image: linear-gradient(rgba(0,0,0,0.7),rgba(0,0,0,0.7)),url('../../assets/obg.gif');
+    background-repeat: no-repeat;
+    background-position: cover;
+    background-size: cover;
     /* background: radial-gradient(circle, rgba(203,233,235,1) 0%, rgba(244,243,243,1) 26%, rgba(241,250,238,1) 100%); */
 }
 .container{
     text-align: center;
-    width: 100%;
-    height: 90vh;
+    /* width: 100%;
+    height: 90vh; */
 }
 .col-lg-6 {
     margin-top: 30px;
@@ -113,7 +116,7 @@ form span{
     margin: 0px 8px;
 }
 .submit-container{
-    background-color: rgb(148, 137, 121); 
+    background-color: rgb(81 9 9); 
     font-size: 20px;
     color: white;
     
