--- a/src/Components/UserLogin/Login.css
+++ b/src/Components/UserLogin/Login.css
@@ -134,6 +134,7 @@ form span{
         object-fit: cover;
         background-position: center;
         background-size: cover;
+        margin-top: 30px;
     }
     .input-container label{
         font-size: 16px;
