--- a/src/Components/UserLogin/Login.css
+++ b/src/Components/UserLogin/Login.css
@@ -190,3 +190,10 @@ form span{
     left: 50%;
     transform: translate(-50%,-50%);
   }
+.btncontainer{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+  }
+ 
