--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -13,7 +13,7 @@ header{
 .nav{
     width: 100%;
     height: 50px;
-    background-color: rgb(81 9 9); 
+    background-color: rgb(39, 2, 2); 
     display: flex;
     justify-content: space-between;
     align-items: center;
